--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,15 @@
-<IfModule mod_rewrite.c>
-    Options -Multiviews
-    RewriteEngine On 
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
-</IfModule>
+# public/.htaccess
+Options -Multiviews
+Options -Indexes
+RewriteEngine On
+
+# Para capturar el token
+RewriteCond %{HTTP:Authorization} ^(.*)
+RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+
+# If the requested file exists, serve it directly
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# Otherwise forward request to index.php
+RewriteRule ^ index.php [L,QSA]
