Commit Config Volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,5 @@ services:
       - "8081:80"
     volumes:
       - ./:/var/www/html
+      - ./configVirtualHost/000-default.conf:/etc/apache2/sites-available/000-default.conf:ro
+
