--- a/configVirtualHost/000-default.conf
+++ b/configVirtualHost/000-default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    DocumentRoot /var/www/html/
+    DocumentRoot /var/www/html
     DirectoryIndex index.php index.html index.htm
 
     <Directory /var/www/html>
